# Demo

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/release/: app-release.apk  output.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: test.html  test1.html
app/src/main/assets/hygj/: index.html
app/src/main/res/drawable/: rocket_anim.xml  shadow.xml
app/src/main/res/layout/: activity_apge.xml  activity_control.xml  activity_coordinator.xml  activity_file_provider.xml  activity_first.xml  activity_http.xml  activity_kotlin.xml  activity_lifecycle.xml  activity_main.xml  activity_nest.xml  activity_refresh.xml  activity_scroll.xml  activity_shadow.xml  activity_short_cut.xml  activity_web.xml  activity_wheel.xml  fragment_lifecycle.xml  item_page.xml  main_item.xml  test_item.xml  view_footer.xml  view_header.xml
app/src/main/res/values/: attrs.xml  strings.xml
app/src/main/res/xml/: provider_paths.xml
ffmpeg/: CMakeLists.txt  build.gradle
ffmpeg/src/main/cpp/: com_example_ffmpeg_JniUtil.h  native-lib.cpp
ffmpeg/src/main/java/com/example/ffmpeg/: JniUtil.java
gradle/wrapper/: gradle-wrapper.properties
httpproxy/: build.gradle
httpproxy/src/main/: AndroidManifest.xml
httpproxy/src/main/res/values/: strings.xml
kotlinlibrary/: build.gradle
kotlinlibrary/src/main/: AndroidManifest.xml
kotlinlibrary/src/main/res/layout/: kactivity_kotlin.xml
plugin/: build.gradle
plugindemo/: build.gradle
plugindemo/src/main/: AndroidManifest.xml
plugindemo/src/main/res/layout/: activity_plugin.xml
(+135 files in other folders)
